--- a/crime_data.ipynb
+++ b/crime_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "09d79a2d-f966-4993-be19-8e84b8a29c78",
    "metadata": {},
    "outputs": [
@@ -316,7 +316,7 @@
        "[2184 rows x 16 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +326,7 @@
     "\n",
     "import pandas as pd \n",
     "from pathlib import Path\n",
-    "import \n",
+    "\n",
     "\n",
     "#Upload CSV\n",
     "\n",
@@ -339,8 +339,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "0ee84b90-e0e5-4cd6-98ea-4324b02926c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>state_name</th>\n",
+       "      <th>total_crimes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1979</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>24499060</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1979</td>\n",
+       "      <td>Alaska</td>\n",
+       "      <td>50374</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1979</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>319900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1979</td>\n",
+       "      <td>Arkansas</td>\n",
+       "      <td>157866</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1979</td>\n",
+       "      <td>Arizona</td>\n",
+       "      <td>385010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2179</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>Washington</td>\n",
+       "      <td>465638</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2180</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>Wisconsin</td>\n",
+       "      <td>211030</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2181</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>West Virginia</td>\n",
+       "      <td>62656</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2182</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>21486</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2183</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>15530286</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2184 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      year          state_name  total_crimes\n",
+       "0     1979                 NaN      24499060\n",
+       "1     1979              Alaska         50374\n",
+       "2     1979             Alabama        319900\n",
+       "3     1979            Arkansas        157866\n",
+       "4     1979             Arizona        385010\n",
+       "...    ...                 ...           ...\n",
+       "2179  2020          Washington        465638\n",
+       "2180  2020           Wisconsin        211030\n",
+       "2181  2020       West Virginia         62656\n",
+       "2182  2020             Wyoming         21486\n",
+       "2183  2020                 NaN      15530286\n",
+       "\n",
+       "[2184 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "crime_summary = crime_data[[\"year\",\"state_name\",\"total_crimes\"]]\n",
+    "crime_summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4554e1a6-61a4-4a4d-8e97-e81f9b1f9e0d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4964463f-aa16-468e-8eed-765ff4ae0cf6",
    "metadata": {},
    "outputs": [],
    "source": []
