--- a/energy_final.ipynb
+++ b/energy_final.ipynb
@@ -28,8 +28,8 @@
    "outputs": [],
    "source": [
     "# Store filepath in a variable\n",
-    "iou_utility = Path(\"iou_zipcodes_2020.csv\")\n",
-    "non_iou_utility = Path(\"non_iou_zipcodes_2020.csv\")\n",
+    "iou_utility = Path(\"Resources/iou_zipcodes_2020.csv\")\n",
+    "non_iou_utility = Path(\"Resources/non_iou_zipcodes_2020.csv\")\n",
     "lat_long = Path(\"Resources/AGI+coords_data.csv\")"
    ]
   },
