--- a/crime_data.ipynb
+++ b/crime_data.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "8ea19ecf-8b8c-4629-a49a-256ed07d92e2",
+   "metadata": {},
+   "source": [
+    "Crime Data Analysis (from Federal Bureau of Investigation Crime Data Explorer)\n",
+    "https://cde.ucr.cjis.gov/LATEST/webapp/#/pages/home\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d1247e2-f3a2-42ab-b984-0810b31e798d",
+   "metadata": {},
+   "source": [
+    "Create DataFrame for Total Crimes from imported CSV File."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "09d79a2d-f966-4993-be19-8e84b8a29c78",
@@ -324,6 +341,9 @@
    "source": [
     "#Dependencies\n",
     "\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "import pandas as pd \n",
     "from pathlib import Path\n",
     "\n",
@@ -335,6 +355,14 @@
     "crime_data = pd.read_csv(crime_data_load)\n",
     "\n",
     "crime_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19083a5b-fbcd-4100-9b50-8892922a6eab",
+   "metadata": {},
+   "source": [
+    "Clean Data to only show the relevant data we want in the DataFrame (Year, State, Total Crimes)"
    ]
   },
   {
@@ -469,6 +497,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5aaf60ec-9586-46b5-986d-eeac4d643bd6",
+   "metadata": {},
+   "source": [
+    "Extract Data to Find the number of Total Crimes per State from 1979 to 2020"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "4554e1a6-61a4-4a4d-8e97-e81f9b1f9e0d",
@@ -503,8 +539,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d1df24d7-97c1-4567-b7a5-3bac0dd22710",
+   "metadata": {},
+   "source": [
+    "Extract Data to find the number of Total Crimes per Year from 1979 to 2020"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "4964463f-aa16-468e-8eed-765ff4ae0cf6",
    "metadata": {},
    "outputs": [
@@ -557,74 +601,15 @@
        "Name: total_crimes, dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "per_year_crimes = crime_summary.groupby([\"year\"])[\"total_crimes\"].sum()\n",
-    "per_year_crimes"
+    "per_year_crimes_df = crime_summary.groupby([\"year\"])[\"total_crimes\"].sum()\n",
+    "per_year_crimes_df"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "f6ef873d-f82e-4bf9-961b-49a3d814414c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>total_crimes</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [total_crimes]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "total_crimes_complete = pd.merge(per_state_crimes, per_year_crimes, on=[\"total_crimes\"])\n",
-    "total_crimes_complete"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1fd1083f-a5dd-44f4-9980-4e61bf3be6dc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
